Fix alignemnt of notifications badge on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -162,16 +162,17 @@ label, .form-error, .input-error-message {
 
 .notifications-badge {
   font-size: 0.4em;
+  padding: 0.1em 0.4em;
   position: absolute;
   top: -0.2em;
-  right: -0.5em;
+  right: -0.4em;
   font-weight: bold;
   background-color: red;
   color: white;
-  width: 1.5em;
-  height: 1.5em;
-  border-radius: 5px;
-  text-align: center;
+  /* width: 1.5em;
+  height: 1.5em; */
+  border-radius: 4px;
+  /* text-align: center; */
 }
 
 .profile-top {
